--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "marklisi1.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "files/mark_img.jpg"
+  avatar           : "profile.jpg"
   name             : "Mark Lisi"
   pronouns         : # example: "she/her"  
   bio              : "Yale CS M.S., former SWE @ VA, machine learning specialist"
