--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Mark Lisi"
   pronouns         : # example: "she/her"  
-  bio              : "Yale CS M.S., former SWE @ VA, machine learning specialist"
+  bio              : "Yale CS M.S. / ML Engineer"
   location         : "New Haven, Connecticut"
   employer         : "Yale University"
   uri              : # URL
