--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Mark Lisi"
 title_separator          : "-"
 name                     : &name "Mark Lisi"
-description              : &description "Data Scientist @ EVident Battery"
+description              : &description "Data Scientist @ FantasyPros"
 url                      : https://marklisi1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "marklisi1.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Mark Lisi"
   pronouns         : # example: "she/her"  
-  bio              : "Data Scientist @ EVident Battery, Yale M.S."
+  bio              : "Data Scientist, Yale M.S."
   location         : "New Haven, Connecticut"
-  employer         : "EVident Battery"
+  employer         : "FantasyPros"
   uri              : # URL
   email            : "mark.lisi@yale.edu" 
 
